[package]
name = "tcp_test"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]

[dependencies]
calamine = "0.11.3"
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1.5"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-core="*"
serde="*"
serde_json="*"
serde_derive="*"
lazy_static = "0.2.8"

[[bin]]
name = "server"
path = "src/mains/server_main.rs"

[[bin]]
name = "client"
path = "src/mains/client_main.rs"
